# gimmix

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gimmix.1
data/: gimmix.desktop
glade/: gimmix.glade  gimmix.ui
po/: ChangeLog  POTFILES.in  cs.po  de.po  fr.po  gimmix.pot  sv.po  tr.po  zh_TW.po
src/: AUTHORS  ChangeLog  Changelog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  eggtrayicon.c  eggtrayicon.h  gimmix-config.c  gimmix-config.h  gimmix-core.c  gimmix-core.h  gimmix-covers.c  gimmix-covers.h  gimmix-firstrun.c  gimmix-firstrun.h  gimmix-interface.c  gimmix-interface.h  gimmix-lyrics.c  gimmix-lyrics.h  gimmix-metadata.c  gimmix-playlist.c  gimmix-playlist.h  gimmix-prefs.c  gimmix-systray.c  gimmix-systray.h  gimmix-tagedit.c  gimmix-tooltip.c  gimmix-tooltip.h  gimmix.1  gimmix.c  gimmix.h  sexy-tooltip.c  time  wejpconfig.c
src/data/: gimmix.desktop
src/glade/: gimmix.glade
src/po/: ChangeLog  POTFILES.in  POTFILES.skip  gimmix.pot  sv.po  tr.po  zh_TW.po
src/src/: Makefile.am  autoclean.sh  config.c  config.h  configure.ac  firstrun.c  firstrun.h  gimmix-config.c  gimmix-config.h  gimmix-core.c  gimmix-core.h  gimmix-covers.c  gimmix-covers.h  gimmix-firstrun.c  gimmix-firstrun.h  gimmix-interface.c  gimmix-interface.h  gimmix-lyrics.c  gimmix-lyrics.h  gimmix-metadata.c  gimmix-metadata.h  gimmix-playlist.c  gimmix-playlist.h  gimmix-prefs.c  gimmix-prefs.h  gimmix-systray.c  gimmix-systray.h  gimmix-tagedit.c  gimmix-tagedit.h  gimmix-tooltip.c  gimmix-tooltip.h  gimmix.c  gimmix.h  interface.c  interface.h  playlist.c  playlist.h  sexy-tooltip.c  wejpconfig.c  wejpconfig.h
