SUBDIRS = src po

sharedir   = $(pkgdatadir)
share_DATA = glade/gimmix.glade data/gimmix_firstrun.png

icondir = $(datadir)/pixmaps
icon_DATA = data/gimmix.png \
			data/gimmix_logo_small.png \
			data/gimmix_playlist.png \
			data/gimmix-album.png

desktopdir = $(datadir)/applications
desktop_DATA = data/gimmix.desktop

EXTRA_DIST =                            \
        $(icon_DATA)                    \
        $(share_DATA)                   \
        $(desktop_DATA)
