DEFS += -DPREFIX=\"$(prefix)\"

bin_PROGRAMS=gimmix

gimmix_SOURCES = wejpconfig.c wejpconfig.h		\
		 eggtrayicon.c eggtrayicon.h		\
		 sexy-tooltip.c sexy-tooltip.h		\
		 gimmix-config.c gimmix-config.h	\
		 gimmix-core.c gimmix-core.h		\
		 gimmix-playlist.c gimmix-playlist.h	\
		 gimmix-tooltip.c gimmix-tooltip.h	\
		 gimmix-systray.c gimmix-systray.h	\
		 gimmix-prefs.c gimmix-prefs.h		\
		 gimmix-metadata.c gimmix-metadata.h	\
		 gimmix-interface.c gimmix-interface.h	\
		 gimmix-firstrun.c gimmix-firstrun.h	\
		 gimmix-tagedit.c gimmix-tagedit.h	\
		 gimmix-lyrics.c gimmix-lyrics.h	\
		 gimmix-covers.c gimmix-covers.h	\
		 gimmix.c gimmix.h


gimmix_LDADD = $(GIMMIX_LIBS)
gimmix_CFLAGS = $(GIMMIX_CFLAGS)
